--- a/index.html
+++ b/index.html
@@ -1,29 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <link rel="stylesheet" href="./main.css">
-    
+
     <title>Task</title>
 </head>
+
 <body>
     <section>
         <div class="container pt-5">
-            <div class="car">
-                <div class="ca p-4 d-flex flex-column gap-3 bg-light rounded-3  position-relative">
-                    <img class="position-absolute heart rounded-2" src="https://cdn-icons-png.flaticon.com/128/2077/2077502.png" alt="">
-                    <img class="position-absolute eye rounded-2" src="https://cdn-icons-png.flaticon.com/128/159/159604.png" alt="">
-                        <img class="w-100 rounded-2" src="https://images.immediate.co.uk/production/volatile/sites/30/2020/08/chorizo-mozarella-gnocchi-bake-cropped-9ab73a3.jpg" alt="">
-                    <h6>350$</h4>
-                    <p>Lorem ipsum dolor sit.</p>
-                    <h3 class="btn btn-dark w-100">Add to cart</h3>
-                </div>
+            <div class="cardo">
                 
+
+
             </div>
         </div>
     </section>
     <script src="main.js"></script>
 </body>
+
 </html>
